[package]
name = "randomness_collect"
version = "0.1.0"
authors = ["Jupiter <https://github.com/patractlabs/jupiter>"]
edition = "2021"

[dependencies]
codec = { version = "2.2.0", package = "parity-scale-codec", default-features = false }
hex = { version = "0.4.2", default-features = false, features = ["alloc"] }
lite-json = { version = "0.1", default-features = false }
log = { version = "0.4.14", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
sp-consensus-vrf = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17",default-features = false }
sp-core = { version = "5.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17",default-features = false }
sp-application-crypto = { version = "5.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17",default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "hex/std",
    "lite-json/std",
    "log/std",
    "scale-info/std",

    "frame-support/std",
    "sp-consensus-vrf/std",
    "sp-consensus-babe/std",
    "sp-std/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-application-crypto/std",
]
