[package]
authors = ["Patract <https://github.com/patractlabs>"]
edition = '2018'
name = 'pallet-template'
version = "2.0.0"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet template for benchmarking zkMega lib."

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false}
frame-system = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false}
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false}
sp-io = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false}
sp-std = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false}
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false}
hex = { version = "0.4.3", default-features = false, features = ["alloc"], optional = true }

[dependencies.jupiter-io]
package = "jupiter-io"
path = "../../primitives/io"
default-features = false

[dependencies.curve]
package = "zkmega-arkworks"
git = "https://github.com/patractlabs/zkmega.git"
default-features = false
features = ["tests"]

[dependencies.pallet-contracts]
package = "pallet-contracts"
path = "../../vendor/substrate/frame/contracts"
default-features = false

[dev-dependencies]
hex = "0.4.2"
serde = { version = "1.0.101", features = ["derive"] }
assert_matches = "1.3.0"
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "master" }
jupiter-runtime-common = { path = "../../runtime/common" }
jupiter-chain-extension = { path = "../../primitives/chain-extension" }

[features]
default = ["std"]
std = [
	"codec/std",
    "pallet-contracts/std",
	"frame-support/std",
	"frame-system/std",
    "frame-benchmarking/std",
    "jupiter-io/std",
    "sp-std/std",
]
runtime-benchmarks = [
    "hex",
    "frame-benchmarking",
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "pallet-contracts/runtime-benchmarks",
]
