[package]
name = 'pallet-template'
version = "2.0.0"
authors = ["Patract <https://github.com/patractlabs>"]
edition = '2018'
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet template for benchmarking zkMega lib."

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.1.0", default-features = false, features = ["derive"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

# Substrate primitives
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }

# Substrate pallets
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-contracts = { path = "../../vendor/substrate/frame/contracts", default-features = false }

# Jupiter primitives
jupiter-io = { path = "../../primitives/io", default-features = false }

# zkMega
[dependencies.curve]
package = "zkmega-arkworks"
git = "https://github.com/patractlabs/zkmega.git"
branch = "master"
default-features = false
features = ["tests"]

[dev-dependencies]
hex = "0.4"
assert_matches = "1.3.0"
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", branch = "master" }
jupiter-chain-extension = { path = "../../primitives/chain-extension" }

[features]
default = ["std"]
std = [
  "codec/std",
  "serde",

  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
  
  "frame-benchmarking/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-contracts/std",
  "jupiter-io/std",
]
runtime-benchmarks = [
  "hex",
  "frame-benchmarking",
  "frame-system/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "pallet-contracts/runtime-benchmarks",
]
