[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
name = "cumulus-token-dealer"
version = "0.1.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false}
frame-system = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false}

# Cumulus dependencies
cumulus-upward-message = { git = "https://github.com/paritytech/cumulus", branch = "master", default-features = false}
cumulus-primitives = { git = "https://github.com/paritytech/cumulus", branch = "master", default-features = false }

# Polkadot dependencies
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "master", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "cumulus-upward-message/std",
    "cumulus-primitives/std",
    "frame-support/std",
    "frame-system/std",
    "polkadot-parachain/std",
]
