[package]
name = "jupiter-chain-extension"
version = "0.1.0"
authors = ["Patract <https://github.com/patractlabs>"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ["derive", "max-encoded-len"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
log = { version = "0.4", default-features = false }

# Substrate primitives
sp-runtime = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-std = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }

# Substrate pallets
frame-support = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
pallet-contracts = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }

[features]
default = ["std"]
std = [
  "codec/std",
  "hex/std",
  "log/std",

  "sp-runtime/std",
  "sp-std/std",

  "frame-support/std",
  "pallet-contracts/std",
]
