[package]
name = "jupiter-chain-extension"
version = "0.1.0"
authors = ["Patract <https://github.com/patractlabs>"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ["derive", "max-encoded-len"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
log = { version = "0.4", default-features = false }

# Substrate primitives
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }

# Substrate pallets
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
pallet-contracts = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }

[features]
default = ["std"]
std = [
  "codec/std",
  "hex/std",
  "log/std",

  "sp-runtime/std",
  "sp-std/std",

  "frame-support/std",
  "pallet-contracts/std",
]
