[package]
name = "chain_extension"
version = "0.1.0"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-contracts = { path = "../../vendor/substrate/frame/contracts", default-features = false }
jupiter-io = { path = "../io", default-features = false }

[dependencies.curve]
git = "https://github.com/patractlabs/megaclite.git"
package = "megaclite-arkworks"

[features]
default = ["std"]
std = [
  "jupiter-io/std",
  "pallet-contracts/std",
  "sp-runtime/std",
]