[package]
name = "jupiter-io"
version = "0.2.0"
authors = ["Patract <https://github.com/patractlabs>"]
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Substrate primitives
sp-runtime-interface = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17", default-features = false }

#[dependencies.curve]
#package = "zkmega-arkworks"
#git = "https://github.com/patractlabs/zkmega.git"
#branch = "master"
#default-features = false
#features = ["tests"]

curve = { package = "zkmega-arkworks", git = "https://github.com/patractlabs/zkmega.git", branch = "master", default-features = false }

[features]
default = ["std"]
std = [
  "sp-runtime-interface/std",
  "sp-std/std",
]
