[package]
name = "jupiter-runtime-common"
version = "0.1.0"
authors = ["Jupiter <https://github.com/patractlabs/jupiter>"]
edition = "2018"

[dependencies]
smallvec = "1.4.1"

sp-std = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-runtime = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }

frame-support = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
frame-system = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-balances = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-transaction-payment = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-authorship = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-collective = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-democracy = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-elections-phragmen = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-im-online = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-indices = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-multisig = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-proxy = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-scheduler = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-session = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-staking = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-timestamp = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-treasury = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-utility = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }

jupiter-primitives = { path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
    "sp-std/std",
    "sp-runtime/std",

    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "pallet-transaction-payment/std",
    "pallet-authorship/std",
    "pallet-collective/std",
    "pallet-democracy/std",
    "pallet-elections-phragmen/std",
    "pallet-im-online/std",
    "pallet-indices/std",
    "pallet-multisig/std",
    "pallet-proxy/std",
    "pallet-scheduler/std",
    "pallet-session/std",
    "pallet-staking/std",
    "pallet-timestamp/std",
    "pallet-treasury/std",
    "pallet-utility/std",

    "jupiter-primitives/std",
]
