[package]
name = "jupiter-runtime-common"
version = "0.1.0"
authors = ["Patract <https://github.com/patractlabs>"]
edition = "2018"

[dependencies]
smallvec = "1.4.1"
static_assertions = "1.1.0"

sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-democracy = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-elections-phragmen = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-identity = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-indices = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-proxy = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-scheduler = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-treasury = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-bounties = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-tips = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }

jupiter-primitives = { path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
  "sp-std/std",
  "sp-runtime/std",

  "frame-support/std",
  "frame-system/std",
  "pallet-authorship/std",
  "pallet-balances/std",
  "pallet-transaction-payment/std",
  "pallet-collective/std",
  "pallet-democracy/std",
  "pallet-elections-phragmen/std",
  "pallet-im-online/std",
  "pallet-identity/std",
  "pallet-indices/std",
  "pallet-multisig/std",
  "pallet-proxy/std",
  "pallet-scheduler/std",
  "pallet-session/std",
  "pallet-staking/std",
  "pallet-timestamp/std",
  "pallet-treasury/std",
  "pallet-bounties/std",
  "pallet-tips/std",
  "pallet-utility/std",

  "jupiter-primitives/std",
]

runtime-benchmarks = [
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",

  "sp-runtime/runtime-benchmarks",

  "pallet-balances/runtime-benchmarks",
  "pallet-collective/runtime-benchmarks",
  "pallet-democracy/runtime-benchmarks",
  "pallet-elections-phragmen/runtime-benchmarks",
  "pallet-im-online/runtime-benchmarks",
  "pallet-identity/runtime-benchmarks",
  "pallet-indices/runtime-benchmarks",
  "pallet-multisig/runtime-benchmarks",
  "pallet-proxy/runtime-benchmarks",
  "pallet-scheduler/runtime-benchmarks",
  "pallet-staking/runtime-benchmarks",
  "pallet-timestamp/runtime-benchmarks",
  "pallet-treasury/runtime-benchmarks",
  "pallet-bounties/runtime-benchmarks",
  "pallet-tips/runtime-benchmarks",
  "pallet-utility/runtime-benchmarks",
]
