[package]
name = "jupiter-dev-runtime"
version = "0.1.0"
authors = ["Patract <https://github.com/patractlabs>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.1.0", default-features = false, features = ["derive"] }
hex-literal = { version = "0.3.1", optional = true }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
static_assertions = "1.1.0"

# Substrate primitives
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
sp-offchain = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1" }
sp-session = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }

# Substrate pallets
frame-executive = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
frame-system-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", optional = true }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-indices = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }

# contracts
pallet-contracts = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-contracts-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }

# local pallets
pallet-template = { path = "../../pallets/template", default-features = false }
pallet-randomness-provider = { path = "../../pallets/randomness-provider", default-features = false }

# local runtime
jupiter-primitives = { path = "../../primitives", default-features = false }
jupiter-runtime-common = { path = "../common", default-features = false }
jupiter-chain-extension = { path = "../../primitives/chain-extension", default-features = false, features = [ "native-support" ] }

[build-dependencies]
substrate-wasm-builder = "4.0.0"

[features]
default = ["std"]
std = [
  "codec/std",
  "serde",

  "sp-api/std",
  "sp-block-builder/std",
  "sp-core/std",
  "sp-inherents/std",
  "sp-runtime/std",
  "sp-std/std",
  "sp-transaction-pool/std",
  "sp-version/std",
  "sp-offchain/std",

  "frame-executive/std",
  "frame-support/std",
  "frame-system/std",
  "frame-system-rpc-runtime-api/std",
  "frame-benchmarking/std",

  "pallet-authorship/std",
  "pallet-randomness-collective-flip/std",
  "pallet-sudo/std",
  "pallet-timestamp/std",
  "pallet-indices/std",
  "pallet-balances/std",
  "pallet-transaction-payment/std",
  "pallet-transaction-payment-rpc-runtime-api/std",
  "pallet-contracts/std",
  "pallet-contracts-primitives/std",
  "pallet-contracts-rpc-runtime-api/std",

  "pallet-template/std",
  "pallet-randomness-provider/std",

  "jupiter-primitives/std",
  "jupiter-runtime-common/std",
  "jupiter-chain-extension/std",
]
runtime-benchmarks = [
  "hex-literal",
  "frame-benchmarking",
  "frame-system-benchmarking",

  "sp-runtime/runtime-benchmarks",

  "pallet-timestamp/runtime-benchmarks",
  "pallet-indices/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
  "pallet-template/runtime-benchmarks",
  "pallet-contracts/runtime-benchmarks",

  "jupiter-runtime-common/runtime-benchmarks",
]
